@@ -1,7 +1,8 @@
 package be.aalillou.service;
 
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
 import java.util.stream.Stream;
 
 public class MyApp {
@@ -14,8 +15,11 @@ public class MyApp {
     }
 
     public List<String> streamConcat (){
-        List<String> list1 = Stream.of("A", "B", "C").toList();
-        List<String> list2 = Stream.of("D", "E", "F").collect(Collectors.toList());
+        List<Integer> intList = new ArrayList<>();
+        Collections.addAll(intList, 1, 2);
+        List<String> list1 = intList.stream().map(Object::toString).toList();
+        List<String> list2 = Stream.of("A", "B", "C").toList();
+
         return Stream.concat(list1.stream(), list2.stream()).toList();
     }
 }
